# jax-nuts

./: LICENSE  Makefile  README.md  pyproject.toml
jaxnuts/: nuts.py  nuts_functional.py  sandbox.py  utils.py
nuts/: nuts.py
tests/: conjugate_priors.py  sandbox.py  test_bernoulli_process.py  test_normal_process_mean_known.py  test_normal_process_precison_known.py  test_nuts.py  test_poisson_process.py
