[tool.poetry]
name = "jax-nuts"
version = "0.1.0"
description = ""
authors = ["agmuth <agmuth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cpu"], version = "^0.4.23"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
